--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^7.4 | ^8.0"
+        "php": "^7.4 | ^8.0",
+        "illuminate/database": "^12.0@dev",
+        "illuminate/events": "^12.0@dev",
+        "nikic/fast-route": "^2.0@dev"
     },
     "autoload": {
         "psr-4": {
